creation of items and the spawn in the item_room / UI